--- a/Iris flower classification.ipynb
+++ b/Iris flower classification.ipynb
@@ -1,39 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "61551635",
+   "cell_type": "markdown",
+   "id": "59ccc412",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay\n",
-    "from sklearn.preprocessing import LabelEncoder \n",
-    "from sklearn.model_selection import RepeatedStratifiedKFold, GridSearchCV\n",
-    "from sklearn.model_selection import GridSearchCV"
+    "# Import Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "id": "516d7ea7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import Libraries\n",
-    "# Importing Numpy & Pandas for data processing & data wrangling\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
